Fix horizontal scroll: add box-sizing: border-box to block wrappers

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -9,6 +9,8 @@
 
 .nrpb-posts-filter,
 .nrpb-posts-grid {
+	box-sizing: border-box;
+	width: 100%;
 	padding-inline: var(--nrpb-page-gutter);
 
 	@include m.respond-down(sm) {
